# LTecher-Adventure

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS.md  README.md  TODO  imgui.ini  pack_assets.py
art/images/entities/: Player.aseprite
art/images/entities/enemies/: skull.pxd
art/images/envoriment/buildings/homes/: village_house.pxd
art/images/ui/: healthbar.pxd  heart.pxd
build_macos/: instructions.txt
bundle/: Info.plist  icon.icns  icon.pxd  run.sh
cmake/: CTestCustom.cmake  macos_bundle.cmake
cmake/compilers/: clang.cmake  gcc.cmake
cmake/platform/: windows.cmake
include/: raygui.h
include/exceptions/: app_exceptions.hpp
include/framework/: gameobject.h  math.h  minigameobject.h  scene.h  sdl_data.h
include/marcos/: exit_codes.h
include/network/: network_constants.h
include/network/types/: network_types.h  packet_types.h
include/save/data/: player_data.h
resources/: assetpackage.json
resources/animations/: player_anim.json
resources/audio/sfx/: start.rfx
resources/audio/sfx/health/: death.rfx
resources/images/: Tilemap.pxd
resources/images/branding/: Splash.pxd
resources/images/entites/: Player.aseprite
resources/images/entites/enemies/: zombie.pxd
resources/images/envoriment/props/: torch.pxd
resources/images/envoriment/sky/: cloud.pxd  sky.pxd
resources/images/envoriment/tilemap/: ground.pxd
resources/images/items/: sword.pxd
resources/images/ui/screens/: screen_inventory.aseprite
resources/levels/: beginning_village.json  beginning_village.pxd  beginning_village.tmx
resources/shaders/: blur.fs
resources/ui/: ._healthbar.pxd  dialog.pxd  healthbar.pxd  heart.pxd
src/: app.cpp  app.h  asset_ids.h  atlas.cpp  atlas.h  event.h  gameobject.h  keybinds.cpp  keybinds.h  ltmath.cpp  ltmath.h  main.cpp  os_info.cpp  os_info.h  plugin.h  scene.cpp  scene.h  server_main.cpp  tick_system.cpp  tick_system.h
src/components/: component.h  health.cpp  health.h
src/components/entites/: player_anim.cpp  player_anim.h
src/debug/: binary.c  binary.h
src/entities/: camera.cpp  camera.h  player.cpp  player.h
src/entities/player/: player.cpp  player.h  player_anim.cpp  player_anim.h
src/extensions/: debug.cpp  debug.h  game_save.cpp  game_save.h
src/framework/: gameobject.h  math.h  scene.h
src/gui/: health_bar.cpp  health_bar.h  heart_bar.cpp  panel.cpp  panel.h  ui_element.h
src/gui/buttons/: button.cpp  button.h  check_box.cpp  check_box.h
src/gui/custom/: health_bar.h  heart_bar.cpp  heart_bar.h
src/gui/screens/: game_hud.cpp  game_hud.h  main_menu.cpp  main_menu.h  screen.h
src/gui/screens/popouts/: inventory.cpp  inventory.h  pause.cpp  pause.h
src/map/: tile.h
src/marcos/: compare.h  errors.h
src/network/: packet_utils.c  packet_utils.h
src/random/: 17bitshift.cpp  c_random.cpp  c_random.h  irandom_generator.h  random.cpp  random.h  timerandom.cpp  urandom.cpp  urandom.h
src/save/: game_save.cpp  game_save.h
src/saving/: game_save.cpp  game_save.h
src/scenes/: scene_game.cpp  scene_game.h
src/server/: server.cpp  server.h
src/util/: hash.c  hash.h
src/world/: world.cpp  world.h
tests/: test_save.cpp  test_vec2.cpp  tests.cmake
